# assistente-rag-hacarthon

./: .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  train.py  vector_store.py
assistente_rag_hacarthon/: data_ingestion.py
